// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer should render correctly 1`] = `
"<span class=\\"\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span>"
`;

exports[`Spacer should support x and y 1`] = `
"<div><span class=\\"\\" w=\\"5\\"><style>
        span {
          display: block;
          width: calc(5 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span><span class=\\"\\" w=\\"15\\"><style>
        span {
          display: block;
          width: calc(15 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span><span class=\\"\\" h=\\"15\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(15 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span><span class=\\"\\" h=\\"2\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(2 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span></div>"
`;

exports[`Spacer should work with float 1`] = `
"<div><span class=\\"\\" w=\\"2.2\\"><style>
        span {
          display: block;
          width: calc(2.2 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span><span class=\\"\\" w=\\"1.5\\"><style>
        span {
          display: block;
          width: calc(1.5 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span><span class=\\"\\" h=\\"0.1\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(0.1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span><span class=\\"\\" h=\\"1.8\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(1.8 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span></div>"
`;

exports[`Spacer should work with inline mode 1`] = `
"<span class=\\"\\"><style>
        span {
          display: inline-block;
          width: calc(1 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span>"
`;
